rmk-macro/tests/compile_fail/input_event_invalid_syntax.stderr
error: invalid attribute syntax. Expected `key = value`
 --> tests/compile_fail/input_event_invalid_syntax.rs:3:15
  |
3 | #[input_event(subs)]
  |               ^^^^

error: expected `,`
 --> tests/compile_fail/input_event_invalid_syntax.rs:7:32
  |
7 | #[input_event(channel_size = 8 subs = 4)]
  |                                ^^^^
